--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="col-md-12">
           <form>
             <div class="form-group">
-              <label for="location">Location</label>
+              <label for="location">Location (e.g. Città Studi, Milano)</label>
               <input type="text" class="form-control" id="location" placeholder="Location">
             </div>
               <div class="checkbox">
