--- a/index.html
+++ b/index.html
@@ -16,8 +16,18 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <style>
 
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.33.1/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.33.1/mapbox-gl.css' rel='stylesheet' />
+
+    <style>
+    #map {
+      /*position:absolute;*/
+      top:0;
+      bottom:0;
+      width:100%;
+      height: 45vh;
+    }
     </style>
   </head>
   <body>
@@ -30,21 +40,31 @@
       </div>
       <div class="row">
         <div class="col-md-12">
+          <div id='map'></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
           <form>
-            <div class="form-group">
+            <!-- <div class="form-group">
               <label for="location">Location (e.g. Città Studi, Milano)</label>
               <input type="text" class="form-control" id="location" placeholder="Location">
-            </div>
-            <div class="form-group">
+            </div> -->
+            <!-- <div class="form-group">
               <label for="location">GEOJson (e.g. https://raw.githubusercontent.com/iosonosempreio/wannabe/master/cs.json)</label>
               <input type="text" class="form-control" id="geo-filter" placeholder="GEOJson">
+            </div> -->
+            <div class="form-group">
+              <label for="inputGEOJSON">File input</label>
+              <input type="file" id="inputGEOJSON">
+              <p class="help-block">Example block-level help text here.</p>
             </div>
             <div class="checkbox">
               <label>
                 <input type="checkbox" id="save-pictures"> Summarize data
               </label>
             </div>
-            <input type="button" class="btn btn-primary" value="Go!" onclick="scrape(d3.select('#geo-filter').property('value'));"/>
+            <input type="button" class="btn btn-primary" value="Go!" onclick="scrape(inputGeoJson);"/>
           </form>
         </div>
       </div>
@@ -56,174 +76,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.3/FileSaver.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.7.3/d3.min.js"></script>
-    <script src="https://npmcdn.com/@turf/turf/turf.min.js"></script>
+    <!-- <script src="https://npmcdn.com/@turf/turf/turf.min.js"></script> -->
+    <script src="https://api.mapbox.com/mapbox.js/plugins/turf/v2.0.2/turf.min.js"></script>
     <script src="https://use.fontawesome.com/28506796e6.js"></script>
-
-    <script>
-      var options = {
-        'client_id' : '3092nxybyb0otqw18e8nh5nty',
-        'locale' : 'it_IT',
-        'currency' : 'EUR',
-        '_format' : 'for_search_results',
-        '_limit' : '50',
-        //'_offset' : '0',
-        'guests' : '1',
-        'ib' : 'false',
-        'ib_add_photo_flow' : 'true',
-        'min_bathrooms' : '0',
-        'min_bedrooms' : '0',
-        'min_beds' : '0',
-        'price_min' : '0',
-        'price_max' : '1000',
-        'min_num_pic_urls' : '0',
-        'sort' : '1',
-        'suppress_facets' : 'true',
-        'location' : '',
-        'user_lat' : '',
-        'user_lng' : ''
-      }
-
-      var results = [];
-
-      function buildURL(offset) {
-        var url = 'https://cors-anywhere.herokuapp.com/https://api.airbnb.com/v2/search_results';
-        var keys = Object.keys(options);
-        url += '?';
-        if (offset) {
-          url += '_offset='+offset+'&';
-        }
-        keys.forEach(function(opt,i){
-          url += opt + '=' + options[opt];
-          if ( i < keys.length-1 ) {
-            url += '&';
-          }
-        });
-        // console.log(url);
-        return url;
-      }
-
-      function scrape(geojson) {
-        if (geojson) {
-          d3.json(geojson, function(err,poly){
-            poly = poly.features[0];
-            console.log(poly);
-            options['location'] = encodeURIComponent(d3.select('#location').property('value'));
-            var offset = 0;
-            call(0);
-            function call(value){
-              d3.json(buildURL(value), function(err,data){
-                if (err) { console.log(err); }
-                console.log(offset, data.metadata.listings_count);
-                data.search_results.forEach(function(r){
-                  var point = {
-                    "type": "Feature",
-                    "properties": {
-                      "marker-color": "#f00"
-                    },
-                    "geometry": {
-                      "type": "Point",
-                      "coordinates": [r.listing.lng, r.listing.lat]
-                    }
-                  };
-                  var isInside = turf.inside(point, poly);
-                  if (isInside) {
-                    var obj = {};
-                    if (d3.select('#save-pictures').property('checked')) {
-                      obj.price = r.pricing_quote.nightly_price;
-                      obj.currency = r.pricing_quote.listing_currency;
-                      obj.bathrooms = r.listing.bathrooms;
-                      obj.beds = r.listing.beds;
-                      obj.city = r.listing.city;
-                      obj.instant_bookable = r.listing.instant_bookable;
-                      obj.lat = r.listing.lat;
-                      obj.lng = r.listing.lng;
-                      obj.name = r.listing.name;
-                      obj.person_capacity = r.listing.person_capacity;
-                      obj.reviews_count = r.listing.reviews_count;
-                      obj.type = r.listing.room_type;
-                      obj.bedrooms = r.listing.bedrooms;
-                      obj.bedrooms = r.listing.bedrooms;
-                      obj.bedrooms = r.listing.bedrooms;
-                      obj.bedrooms = r.listing.bedrooms;
-                      obj.bedrooms = r.listing.bedrooms;
-                      obj.bedrooms = r.listing.bedrooms;
-                      results.push(obj);
-                    } else {
-                      results.push(r);
-                    }
-                  }
-                })
-                if (data && data.metadata.pagination.next_offset < data.metadata.listings_count && offset <= 900) {
-                  offset += 50;
-                  setTimeout(function(){
-                    call(offset);
-                  }, 0);
-                } else {
-                  console.log('finished', results);
-                  downloadData(results);
-                }
-              })
-            }
-          });
-        } else {
-          options['location'] = encodeURIComponent(d3.select('#location').property('value'));
-          var offset = 0;
-          call(0);
-          function call(value){
-            d3.json(buildURL(value), function(err,data){
-              if (err) { console.log(err); }
-              console.log(offset, data.metadata.listings_count);
-              data.search_results.forEach(function(r){
-                var obj = {};
-                if (d3.select('#save-pictures').property('checked')) {
-                  obj.price = r.pricing_quote.nightly_price;
-                  obj.currency = r.pricing_quote.listing_currency;
-                  obj.bathrooms = r.listing.bathrooms;
-                  obj.beds = r.listing.beds;
-                  obj.city = r.listing.city;
-                  obj.instant_bookable = r.listing.instant_bookable;
-                  obj.lat = r.listing.lat;
-                  obj.lng = r.listing.lng;
-                  obj.name = r.listing.name;
-                  obj.person_capacity = r.listing.person_capacity;
-                  obj.reviews_count = r.listing.reviews_count;
-                  obj.type = r.listing.room_type;
-                  obj.bedrooms = r.listing.bedrooms;
-                  obj.bedrooms = r.listing.bedrooms;
-                  obj.bedrooms = r.listing.bedrooms;
-                  obj.bedrooms = r.listing.bedrooms;
-                  obj.bedrooms = r.listing.bedrooms;
-                  obj.bedrooms = r.listing.bedrooms;
-                  results.push(obj);
-                } else {
-                  results.push(r);
-                }
-              })
-              if (data && data.metadata.pagination.next_offset < data.metadata.listings_count && offset <= 900) {
-                offset += 50;
-                setTimeout(function(){
-                  call(offset);
-                }, 0);
-              } else {
-                console.log('finished', results);
-                downloadData(results);
-              }
-            })
-          }
-        }
-
-
-      }
-
-      function downloadData(data) {
-        var today = new Date();
-        var dateOk = today.getFullYear()+'-'+today.getMonth()+1+'-'+today.getDate();
-        var outputName = 'airbnb-'+ decodeURIComponent(options['location']).toLowerCase().replace(/ /g,'-') +'-'+ dateOk +'.json';
-        var blob = new Blob([JSON.stringify(data,null,2)], {type: "data:text/json;charset=utf-8"});
-        saveAs(blob, outputName);
-      }
-
-    </script>
+    <script src="./script.js"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
